--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: 7.0.x
+          dotnet-version: 8.x.x
       - name: Build
         run: dotnet build ${{ env.INPUT_DIR }} -c ${{ env.CONFIGURATION }} -o ${{ env.OUTPUT_DIR }}
       - name: Pack
